<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/home_navigation"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home" />

    <item
        android:id="@id/accounts_navigation"
        android:icon="@drawable/ic_menu_accounts"
        android:title="@string/accounts" />

    <item
        android:id="@id/add_edit_transaction_fragment"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/add_transaction" />

    <item
        android:id="@id/report_navigation"
        android:icon="@drawable/ic_menu_report"
        android:title="@string/report" />

    <item
        android:id="@id/settings_navigation"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/settings" />

</menu>