<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/spacing_normal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/note"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_extra_small"
                android:contentDescription="@string/write_note"
                android:padding="12dp"
                app:icon="@drawable/ic_pencil" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/date"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_extra_small"
                android:contentDescription="@string/set_date"
                android:padding="12dp"
                app:icon="@drawable/ic_calendar" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/photo"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_extra_small"
                android:contentDescription="@string/add_a_photo"
                android:padding="12dp"
                app:icon="@drawable/ic_photo_camera" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tag"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_extra_small"
                android:contentDescription="@string/attach_a_tag"
                android:padding="12dp"
                app:icon="@drawable/ic_tag" />
        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_normal"
        android:text="@string/save" />
</LinearLayout>