<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:theme="@style/Theme.BudgetHub">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.App.Toolbar.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/transaction" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/spacing_normal"
                    app:checkedChip="@id/type_expense"
                    app:chipSpacingHorizontal="@dimen/spacing_normal"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true"
                    tools:ignore="DuplicateIncludedIds">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/type_expense"
                        style="@style/Widget.App.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/type_income"
                        style="@style/Widget.App.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income" />
                </com.google.android.material.chip.ChipGroup>

                <include
                    android:id="@+id/account"
                    layout="@layout/view_account_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    tools:ignore="DuplicateIncludedIds" />

                <include
                    android:id="@+id/amount_view"
                    layout="@layout/view_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_normal" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/category_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/category_label_expense" />

                <include
                    android:id="@+id/category"
                    layout="@layout/view_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_extra_small"
                    tools:ignore="DuplicateIncludedIds" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_normal" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include
        android:id="@+id/buttons"
        layout="@layout/view_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>